# BBHash

./: CMakeLists.txt  README.md
include/: BBHash.hpp  BitVector.hpp
src/: BBHash.cpp  BitVector.cpp  RankSupport.cpp  benchmark.cpp  main.cpp
